+Added option to modify miners

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -20,10 +20,16 @@
     <!--
     <link rel="stylesheet" href="{{ url_for('static', filename='styles/main.css') }}" />
     -->
-    <link rel="stylesheet" href="{{ url_for('static', filename='styles/bootstrap.min.css') }}" />
-
+	
+	<link rel="stylesheet" href="{{ url_for('static', filename='styles/bootstrap.min.css') }}" />
+	
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+	<!-- Optional theme -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ url_for('static', filename='styles/dashboard.css') }}" />
-
+	
+	<link href="{{ url_for('static', filename='open-iconic/font/css/open-iconic-foundation.css') }}" rel="stylesheet">
+	<style>.template-icons {width:20px; height:20px;}</style>
     {% endblock head_css -%}
 
     {% block head -%}
