--- a/app/templates/antminers.html
+++ b/app/templates/antminers.html
@@ -133,7 +133,7 @@ cryptocurrency, crypto, miner, mine, mining
 
 <fieldset name="active_miner_list">
     <legend>Active Miners ({{ active_miners|length }})</legend>
-    <div class="table-responsive">
+    <div class="">
       <table class="table table-striped table-sm">
         <thead>
           <tr>
@@ -141,9 +141,11 @@ cryptocurrency, crypto, miner, mine, mining
             <th>Worker</th>
             <th>Model</th>
             <th>Remarks</th>
+			<!--
             <th title="'O' means OK">Chips (Os)</th>
             <th title="'X' means defective">Chips (Xs)</th>
             <th title="'-' means instability of the power supply voltage or the defective hash board">Chips (-)</th>
+			-->
             <th>Chip Temp(C)</th>
             <th>Fan speeds (rpm)</th>
             <th>Hashrate (5s)</th>
@@ -165,6 +167,7 @@ cryptocurrency, crypto, miner, mine, mining
 
                 <td>
                   {{ workers[active_miner.ip] }}
+				  
                 </td>
                 <td title="{{ active_miner.model.description }}">
                   {{ active_miner.model.model }}
@@ -172,6 +175,7 @@ cryptocurrency, crypto, miner, mine, mining
                 <td>
                   {{ active_miner.remarks }}
                 </td>
+				<!--
                 <td>
                   {{ miner_chips[active_miner.ip]['status']['Os'] }}
                 </td>
@@ -181,6 +185,7 @@ cryptocurrency, crypto, miner, mine, mining
                 <td>
                   {{ miner_chips[active_miner.ip]['status']['-'] }}
                 </td>
+				-->
                 <td>
                   {{ temperatures[active_miner.ip] }}
                 </td>
@@ -203,11 +208,169 @@ cryptocurrency, crypto, miner, mine, mining
                     <a target="_blank" href="/{{ active_miner.ip }}/pools">Pools</a> |
                     <a target="_blank" href="/{{ active_miner.ip }}/stats">Stats</a></td>-->
                 <td>
-                  <a href={{ url_for('delete_miner', id=active_miner.id) }}><img src="/static/images/assets/remove.png"></img>
-                  </a>
+				
+					<a href={{ url_for('delete_miner', id=active_miner.id) }}>
+						
+						<img class="template-icons" src="/static/open-iconic/svg/x.svg" alt="x">
+						
+						<!--<img src="/static/images/assets/remove.png"></img>-->
+					</a>
+					
+					<a style="margin-left: 0.5em;" href={{ url_for('edit_miner', id=active_miner.id) }}>
+						<img class="template-icons" src="/static/open-iconic/svg/pencil.svg" alt="pencil">
+					</a>
+				  
                 </td>
             </tr>
+			<tr>
+			<!--
+			<td colspan="1">
+			</td>
+			-->
+			<td colspan="14">
+				<div class="row">
+				
+					{%- for worker in workers['pools'] %}
+						<div class="col-sm-4">
+							<table class="table table-striped">
+								<thead>
+								  <tr>
+									<th>Pool</th>
+									<th></th>
+								  </tr>
+								</thead>
+								<tbody>
+								  <tr>
+									<td>User</td>
+									<td>{{ worker['User'] }}</td>
+								  </tr>
+								  <tr>
+									<td>Stratum URL</td>
+									<td>{{ worker['Stratum URL'] }}</td>
+								  </tr>
+								  <tr>
+									<td>URL</td>
+									<td>{{ worker['URL'] }}</td>
+								  </tr>
+								  <tr>
+									<td>Status</td>
+									<td>{{ worker['Status'] }}</td>
+								  </tr>
+								  <tr>
+									<td>Stratum Active</td>
+									<td>{{ worker['Stratum Active'] }}</td>
+								  </tr>
+								  
+								</tbody>
+							</table>
+							
+						</div>
+					
+					{%- endfor %}
+				</div>
+				
+				<div class="col-sm-12">
+					<!--
+					<label for="model_id">
+						{{ workers['pools'] }}
+					</label>
+					-->
+					<!--
+					 u'Stratum Active':True,
+					 u'Difficulty Accepted':61777920.0,
+					 u'Pool Rejected%':0.2051,
+					 u'Difficulty Rejected':126976.0,
+					 u'Diff1 Shares':237964,
+					 u'Status':u'Alive',
+					 u'Proxy Type':u'',
+					 u'Best Share':1195556894,
+					 u'Pool Stale%':0.0,
+					 u'Quota':1,
+					 u'Rejected':17,
+					 u'Stratum URL':u'thecoin.pw',
+					 u'Proxy':u'',
+					 u'Long Poll':u'N',
+					 u'Accepted':9670,
+					 u'User':u'bellaciao.0',
+					 u'Get Failures':0,
+					 u'Difficulty Stale':0.0,
+					 u'URL':         u'stratum+tcp:         //thecoin.pw:3840         ', u'         Discarded':3968,
+					 u'Has Stratum':True,
+					 u'Last Share Time':         u'0:00:01         ', u'         Stale':0,
+					 u'POOL':0,
+					 u'Priority':0,
+					 u'Getworks':202,
+					 u'Has GBT':False,
+					 u'Last Share Difficulty':8192.0,
+					 u'Diff':u'8.19K',
+					 u'Remote Failures':0
+					 -->
+								
+					<!--
+					<button class="btn btn-primary btn-lg btn-block" data-toggle="collapse" data-target="#demo">
+					  Add Miner
+					</button>
+					-->
+					<!--<div id="demo" class="collapse"> -->
+					<!--
+					  <fieldset name="add - {{ active_miner.id }}">
+						<legend>Add Miner</legend>
+						<form action="{{ url_for('add_miner') }}" method="POST">
+							<div class="addminer_container">
+								<div class="row">
+								  <div class="col-md-10 mb-6">
+									<label for="model_id">
+									  IP Address:
+									</label>
+									<input required type="text" name="ip">
+								  </div>
+								</div>
+								
+
+								<div class="row">
+								  <div class="col-md-10 mb-6">
+									<label for="model_id">
+									  Antminer Model
+									</label>
+									<select name="model_id" class="custom-select d-block w-100" id="model_id" required="">
+									  <option disabled selected value> -- select an option --</option>
+									  {%- for model in models|sort(attribute="model") %}
+										  <option value="{{ model.id }}">{{ model.model }} - {{ model.description }}</option>
+									  {%- endfor %}
+									</select>
+
+								  </div>
+								  
+								</div>
+								<div class="row">
+								  <div class="col-md-10 mb-6">
+									<label for="remarks">
+									  Remarks:
+									</label>
+									<input type="text" name="remarks">
+								  </div>
+								</div>
+								
+								<div class="row">
+								  <div class="col-md-5 mb-3">
+									<input class="btn btn-primary btn-lg btn-block" type="submit" value="Add model">
+								  </div>
+								</div>
+							</div>
+						</form>
+					</fieldset>
+					-->
+					<!--</div>-->
+				</div>
+			</td>
+  
+			</tr>
+			
         {%- endfor %}
+
+		<legend>Countdown</legend>
+		<b id="countdown"></b>
+    
         </tbody>
       </table>
     </div>
